--- a/.github/workflows/build-rpm-ice-repo-packages.yml
+++ b/.github/workflows/build-rpm-ice-repo-packages.yml
@@ -48,22 +48,12 @@ jobs:
         run: |
           docker run --rm \
             -v "$GITHUB_WORKSPACE:/workspace" \
+            -e GPG_KEY="${{ secrets.ICE_3_8_CI_SIGNER_KEY }}"
+            -e GPG_KEY_ID="${{ secrets.ICE_3_8_CI_SIGNER_KEY_ID }}"
             ghcr.io/zeroc-ice/ice-rpm-builder-${{ matrix.distribution }} \
             /workspace/ice/packaging/rpm/build-repo-package.sh \
             --distribution "${{ matrix.distribution }}" \
-            --channel "${{ matrix.channel }}" \
-
-      - name: Sign RPM packages and create repository
-        run: |
-          docker_args=(
-            --rm
-            -v "$GITHUB_WORKSPACE:/workspace"
-            -e GPG_KEY="${{ secrets.ICE_3_8_CI_SIGNER_KEY }}"
-            -e GPG_KEY_ID="${{ secrets.ICE_3_8_CI_SIGNER_KEY_ID }}"
-            ghcr.io/zeroc-ice/rpm-repo-builder
-          )
-
-          docker run "${docker_args[@]}" /usr/local/bin/rpm-sign /workspace/build/
+            --channel "${{ matrix.channel }}"
 
       - name: Sync RPM packages to S3
         run: |
