--- a/packaging/rpm/docker/el10/Dockerfile
+++ b/packaging/rpm/docker/el10/Dockerfile
@@ -24,7 +24,8 @@ RUN --mount=type=secret,id=rh_credentials \
     libstdc++-devel \
     redhat-rpm-config \
     glibc-static \
-    libstdc++-static && \
+    libstdc++-static \
+    rpm-sign && \
     dnf builddep -y /usr/src/ice.spec && \
     dnf clean all && \
     subscription-manager unregister && \
