Missing -y argument to dnf install

--- a/packaging/rpm/docker/amzn2023/Dockerfile
+++ b/packaging/rpm/docker/amzn2023/Dockerfile
@@ -17,6 +17,6 @@ RUN dnf install -y \
     glibc-static \
     libstdc++-static \
     rpm-sign && \
-    dnf install --allowerasing gnupg2 && \
+    dnf install -y --allowerasing gnupg2 && \
     rpmspec -q --buildrequires /usr/src/ice.spec | xargs -r dnf install -y && \
     dnf clean all
