Update repo package publishing
The DEB and RPM repo packages must be excluded when synchronizing the repositories
to avoid deleting them. The repo packages are handled in the separate workflow.

The PR also updates the uploading of the repo packages to use "aws s3 cp" instead
of "aws s3 sync", and to allow deploying new versions without updating the package
name.

--- a/.github/workflows/build-deb-ice-repo-packages.yml
+++ b/.github/workflows/build-deb-ice-repo-packages.yml
@@ -69,12 +69,7 @@ jobs:
               ;;
           esac
 
-          mkdir -p "$DISTRIBUTION"
-          aws s3 sync s3://zeroc-downloads/ice/$CHANNEL/$DISTRIBUTION $DISTRIBUTION
-
-          cp -pn build/*.deb "${DISTRIBUTION}/"
-
-          aws s3 sync "$DISTRIBUTION" s3://zeroc-downloads/ice/$CHANNEL/$DISTRIBUTION
+          aws s3 cp build/*.deb s3://zeroc-downloads/ice/$CHANNEL/$DISTRIBUTION
         env:
           CHANNEL: ${{ matrix.channel }}
           DISTRIBUTION: ${{ matrix.distribution }}
