--- a/.github/workflows/publish-deb-packages.yml
+++ b/.github/workflows/publish-deb-packages.yml
@@ -67,7 +67,13 @@ jobs:
             --channel "${CHANNEL}"
 
           echo "Uploading updated repository to S3..."
-          aws s3 sync "${CHANNEL}/${DISTRIBUTION}" "s3://zeroc-downloads/ice/${CHANNEL}/${DISTRIBUTION}" --delete
+          # We add the repo package to --exclude to avoid deleting it, this package is built by
+          # the build-deb-ice-repo-packages workflow
+          aws s3 sync \
+            "${CHANNEL}/${DISTRIBUTION}" \
+            "s3://zeroc-downloads/ice/${CHANNEL}/${DISTRIBUTION}" \
+            --delete \
+            --exclude "ice-repo-${CHANNEL}-*.deb"
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
