Missing slash in aws s3 cp command.

--- a/.github/workflows/build-deb-ice-repo-packages.yml
+++ b/.github/workflows/build-deb-ice-repo-packages.yml
@@ -69,7 +69,7 @@ jobs:
               ;;
           esac
 
-          aws s3 cp build/*.deb s3://zeroc-downloads/ice/$CHANNEL/$DISTRIBUTION
+          aws s3 cp build/*.deb s3://zeroc-downloads/ice/$CHANNEL/$DISTRIBUTION/
         env:
           CHANNEL: ${{ matrix.channel }}
           DISTRIBUTION: ${{ matrix.distribution }}
