--- a/.github/workflows/build-npm-packages.yml
+++ b/.github/workflows/build-npm-packages.yml
@@ -20,7 +20,7 @@ jobs:
           - os: macos-15
             target: macos-arm64
             artifact-path: cpp/bin/slice2js
-          - os: windows-latest
+          - os: windows-2022
             target: windows-x64
             artifact-path: cpp/bin/x64/Release/slice2js.*
           - os: ubuntu-24.04
