--- a/.github/workflows/build-pip-packages.yml
+++ b/.github/workflows/build-pip-packages.yml
@@ -18,7 +18,7 @@ jobs:
       matrix:
         include:
           - os: macos-15
-          - os: windows-latest
+          - os: windows-2022
 
     runs-on: ${{ matrix.os }}
 
