--- a/.github/workflows/build-dotnet-packages.yml
+++ b/.github/workflows/build-dotnet-packages.yml
@@ -132,5 +132,5 @@ jobs:
           path: |
             csharp/src/**/bin/Release/*.nupkg
             csharp/src/**/bin/Release/*.snupkg
-            tools/ZeroC.Ice.Slice.Tools.CSharp/bin/Release/*.nupkg
-            tools/ZeroC.Ice.Slice.Tools.CSharp/bin/Release/*.snupkg
+            csharp/tools/ZeroC.Ice.Slice.Tools.CSharp/bin/Release/*.nupkg
+            csharp/tools/ZeroC.Ice.Slice.Tools.CSharp/bin/Release/*.snupkg
