--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -32,3 +32,8 @@ py-modules = ["slice2py"]
 
 [project.scripts]
 slice2py = "slice2py:main"
+
+[tool.pyright]
+include = ["test"]
+typeCheckingMode = "standard"
+extraPaths = ["python", "../scripts"]
