--- a/ruff.toml
+++ b/ruff.toml
@@ -1,1 +1,10 @@
 line-length = 120
+indent-width = 4
+
+[format]
+# Enable auto-formatting of code examples in docstrings. Markdown,
+# reStructuredText code/literal blocks and doctests are all supported.
+#
+# This is currently disabled by default, but it is planned for this
+# to be opt-out in the future.
+docstring-code-format = true
