--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,5 +2,6 @@
     "recommendations": [
         "ZeroCInc.slice",
         "josevseb.google-java-format-for-vs-code",
+        "charliermarsh.ruff",
     ]
 }
