--- a/ruff.toml
+++ b/ruff.toml
@@ -1,6 +1,11 @@
 line-length = 120
 indent-width = 4
 
+# select = ["I"]
+
+# [isort]
+# known-first-party = ["Ice", "IcePy"]
+
 [format]
 # Enable auto-formatting of code examples in docstrings. Markdown,
 # reStructuredText code/literal blocks and doctests are all supported.
