--- a/ruff.toml
+++ b/ruff.toml
@@ -6,7 +6,15 @@ indent-width = 4
 select = ["I"]
 
 [lint.isort]
-known-first-party = ["Ice", "IcePy", "TestHelper", "AllTests"]
+known-first-party = [
+    "Glacier2",
+    "IcePy",
+    "Ice",
+    "IceBox",
+    "IceGrid",
+    "IceMX",
+    "IceStorm",
+]
 
 [format]
 # Enable auto-formatting of code examples in docstrings. Markdown,
