--- a/ruff.toml
+++ b/ruff.toml
@@ -17,8 +17,8 @@ known-first-party = [
     "IceGrid",
     "IceMX",
     "IceStorm",
+    "AllTests",
 ]
-
 
 [format]
 # Enable auto-formatting of code examples in docstrings. Markdown,
