Refactor Python code generation

--- a/python/python/.gitignore
+++ b/python/python/.gitignore
@@ -3,5 +3,63 @@ IceMX/*
 IceStorm/*
 IceBox/*
 Glacier2/*
-*_ice.py
 IcePy.*
+
+# Generated files for Python Ice package
+Ice/AdapterAlreadyActiveException.py
+Ice/AdapterNotFoundException.py
+Ice/BTEndpointType.py
+Ice/BTSEndpointType.py
+Ice/BoolSeq.py
+Ice/ByteSeq.py
+Ice/Context.py
+Ice/DoubleSeq.py
+Ice/EncodingVersion.py
+Ice/FloatSeq.py
+Ice/Identity.py
+Ice/IdentitySeq.py
+Ice/IntSeq.py
+Ice/InvalidReplicaGroupIdException.py
+Ice/Locator.py
+Ice/LocatorF.py
+Ice/LocatorFinder.py
+Ice/LocatorFinderF.py
+Ice/LocatorRegistry.py
+Ice/LocatorRegistryF.py
+Ice/LogMessage.py
+Ice/LogMessageSeq.py
+Ice/LogMessageType.py
+Ice/LogMessageTypeSeq.py
+Ice/LoggerAdmin.py
+Ice/LoggerAdminF.py
+Ice/LongSeq.py
+Ice/ObjectNotFoundException.py
+Ice/ObjectProxySeq.py
+Ice/ObjectSeq.py
+Ice/OperationMode.py
+Ice/Process.py
+Ice/ProcessF.py
+Ice/PropertiesAdmin.py
+Ice/PropertiesAdminF.py
+Ice/PropertyDict.py
+Ice/ProtocolVersion.py
+Ice/RemoteLogger.py
+Ice/RemoteLoggerAlreadyAttachedException.py
+Ice/RemoteLoggerF.py
+Ice/ReplyStatus.py
+Ice/Router.py
+Ice/RouterF.py
+Ice/RouterFinder.py
+Ice/RouterFinderF.py
+Ice/SSLEndpointType.py
+Ice/ServerNotFoundException.py
+Ice/ShortSeq.py
+Ice/SliceChecksumDict.py
+Ice/StringSeq.py
+Ice/TCPEndpointType.py
+Ice/UDPEndpointType.py
+Ice/URIEndpointType.py
+Ice/WSEndpointType.py
+Ice/WSSEndpointType.py
+Ice/iAPEndpointType.py
+Ice/iAPSEndpointType.py
