--- a/pyrightconfig.json
+++ b/pyrightconfig.json
@@ -1,6 +1,7 @@
 {
     "include": ["python"],
     "extraPaths": ["python/python"],
+    // "stubPath": "python/stubs",
     "typeCheckingMode": "standard",
     "reportMissingTypeAnnotation": "error",
     "reportMissingParameterType": "error",
